[package]
name = "hubman"
version = "0.1.0"
authors = ["Dale Wijnand <dale.wijnand@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1"
hubcaps = { version = "0.5.0", features = ["httpcache"] }
hyper = "0.12"
hyper-tls = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
tokio = "0.1"

[patch.crates-io]
hubcaps = { git = "https://github.com/dwijnand/hubcaps", branch = "hubman" }
# hubcaps = { path = '/d/hubcaps' }
